# tp-eng-soft2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: arquitetura.md  exemplo-saida.md
saiku/: analise.py  coleta.py  main.py  relatorio.py
tests/: conftest.py  test_analise_arquivos.py  test_analise_indicadores_issues.py  test_analise_ordenacao.py  test_analise_prs.py  test_analise_sinais_issues.py  test_analise_taxa_resolucao.py  test_analise_vazio.py  test_coletar_issues.py  test_coletar_prs.py  test_main_banner.py  test_relatorio_csv.py  test_relatorio_resumo.py
