[project]
name = "saiku"
version = "0.1.0"
description = "Ferramenta de linha de comando para analisar issues e pull requests de repositórios do GitHub"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "PyGithub>=2.3",
    "pandas>=2.0",
]

[project.scripts]
saiku = "saiku.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saiku"]
