[project]
name = "saiku"
version = "0.1.0"
description = "Ferramenta de linha de comando para analisar issues e pull requests de repositórios do GitHub"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "PyGithub>=2.3",
    "pandas>=2.0",
]

[project.scripts]
saiku = "saiku.main:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saiku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
